@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-07-26T00:57:30Z",
-  "count" : 91,
-  "count_minmax" : [ 91, 129 ],
-  "count_decinc" : [ -38, +129 ],
+  "count" : 129,
+  "count_minmax" : [ 129, 129 ],
+  "count_decinc" : [ -0, +129 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
