@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-07-25T00:58:14Z",
-  "count_outdated" : 217459,
-  "uniques_outdated" : 2159,
-  "count" : 219260,
-  "uniques" : 2173,
+  "timestamp" : "2024-07-26T00:57:30Z",
+  "count_outdated" : 217588,
+  "uniques_outdated" : 2160,
+  "count" : 219389,
+  "uniques" : 2174,
   "clones" : [
     {
-      "timestamp": "2024-07-11T00:00:00Z",
-      "count": 92,
-      "count_minmax": [ 92, 129 ],
-      "count_decinc": [ 37, 129 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-07-12T00:00:00Z",
-      "count": 129,
-      "count_minmax": [ 129, 129 ],
-      "count_decinc": [ 0, 129 ],
+      "count": 91,
+      "count_minmax": [ 91, 129 ],
+      "count_decinc": [ 38, 129 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2024-07-24T00:00:00Z",
+      "count": 129,
+      "count_minmax": [ 129, 129 ],
+      "count_decinc": [ 0, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-07-25T00:00:00Z",
       "count": 129,
       "count_minmax": [ 129, 129 ],
       "count_decinc": [ 0, 129 ],
